# Periodic-Table-Of-Elements

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PeriodicTableApp.spec  README.md  RELEASE_NOTES.md  pyproject.toml  repo-manifest.json  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
.claude/skills/: audit-data.md  bump-version.md  verify-localization.md
.cursor/rules/: project.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: release.yml  windows-ci.yml
assets/: README.md
assets/styles/: default.qss  theme.qss
data/localization/: de.json  en.json  es.json  fr.json  it.json  ru.json  zh.json
data/raw/: elements.json
data/reference/: industrial_uses.json  (+2 more)
docs/: README_release_linux.txt  README_release_mac.txt  README_release_windows.txt
src/: __init__.py  app_metadata.py  bootstrap.py  error_handling.py  main.py
tests/: test_app_metadata.py  test_compound_builder.py  test_compound_text.py  test_data_loader.py  test_electron_configuration.py  test_element_properties.py  test_formatters.py  test_industrial_uses.py  test_isotope_data.py  test_languages_config.py  test_layout_policy.py  test_lazy_loading.py  test_lewis_diagram.py  test_localization.py  test_molar_mass.py  test_nomenclature.py  test_search_helpers.py  test_settings_service.py  test_solubility.py  test_stoichiometry.py  test_theme.py  test_trends.py
tools/: audit_elements_dataset.py  build_elements_json.py  build_unix.sh  build_windows.ps1  extract_release_notes.py
(+70 files in other folders)
