[project]
name = "periodic-table-of-elements"
version = "1.0.0"
description = "Desktop periodic table explorer"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["build", "dist", "assets"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
